--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react-dom": "^19.2.4",
-    "react": "^19.2.4",
-    "dexie": "^4.0.11",
     "@google/genai": "^1.39.0",
-    "react-markdown": "^9.0.1",
-    "remark-gfm": "^4.0.0",
+    "body-parser": "^2.2.2",
+    "cors": "^2.8.6",
+    "dexie": "^4.0.11",
+    "express": "^5.2.1",
+    "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
-    "html2canvas": "^1.4.1"
+    "nodemailer": "^8.0.1",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
+    "react-markdown": "^9.0.1",
+    "remark-gfm": "^4.0.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
