feat: enhance AI Assistant with configurable charts and styling (mermaid.js integration, theme/color settings)

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^5.2.1",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
+    "mermaid": "^11.12.2",
     "multer": "^2.0.2",
     "nodemailer": "^8.0.1",
     "react": "^19.2.4",
